devops-sourcebot/kustomization/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: devops-sourcebot
  name: devops-sourcebot
