devops-sourcebot/kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-sourcebot
  namespace: devops-sourcebot
spec:
  selector:
    app: devops-sourcebot
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
